griz/httproute.yaml
---
# httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: griz-website
  namespace: griz
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: admin
  hostnames:
  - "next24.msparr.com"
  - "grizrule.msparr.com"
  rules:
  - matches:
    - path:
        value: /griz
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: website
      port: 80
  - matches:
    - headers:
      - name: "Host"
        value: "grizrule.msparr.com"
    backendRefs:
    - name: website
      port: 80
